post: 铺陈曰筵，藉之曰席

--- a/source/_posts/铺陈曰筵，藉之曰席.md
+++ b/source/_posts/铺陈曰筵，藉之曰席.md
@@ -3,3 +3,16 @@ title: 铺陈曰筵，藉之曰席
 date: 2020-07-21 22:55:37
 tags:
 ---
+
+#### 铺陈曰筵，藉之曰席
+
+席地而坐，吃喝玩乐
+
+
+#### 每五日洗沐归谒亲
+
+五天一洗头，头发不出油
+
+#### 乡有庠，州有序，党有校，闾有塾
+
+大专，双非，211，985
