--- a/source/_posts/铺陈曰筵，藉之曰席.md
+++ b/source/_posts/铺陈曰筵，藉之曰席.md
@@ -1,13 +1,13 @@
 ---
 title: 铺陈曰筵，藉之曰席
 date: 2020-07-21 22:55:37
-tags:
+tags: 闲
+cover: https://haungrui-image.oss-cn-beijing.aliyuncs.com/%E5%A6%96%E7%8C%AB2.jpg
 ---
 
 #### 铺陈曰筵，藉之曰席
 
-席地而坐，吃喝玩乐
-
+席地而坐，吃喝玩乐!
 
 #### 每五日洗沐归谒亲
 
